--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ SET(PROJECT_VER "${PROJECT_VER_MAJOR}.${PROJECT_VER_MINOR}.${PROJECT_VER_PATCH}"
 SET(PROJECT_APIVER "${PROJECT_VER}")
 
 if(ARM64)
-   set(BUILD_MMAL FALSE)
+   set(BUILD_MMAL TRUE)
    set(BUILD_MMAL_APPS FALSE)
 else()
    set(BUILD_MMAL TRUE)
